Creating css file

--- a/main.html
+++ b/main.html
@@ -10,8 +10,8 @@
     <div class="gameContainer">
         <h1>Tic Tac Toe</h1>
         <div class="cellContainer">
-            <div cellIndex="0" class="cell"></div>
-            <div cellIndex="1" class="cell"></div>
+            <div cellIndex="0" class="cell">x</div>
+            <div cellIndex="1" class="cell">o</div>
             <div cellIndex="2" class="cell"></div>
             <div cellIndex="3" class="cell"></div>
             <div cellIndex="4" class="cell"></div>
